# pngsmasher-sfml

./: .clang-format  .gitignore  CMakeLists.txt  README.md
pngsmasher/: CMakeLists.txt
pngsmasher/src/pngsmasher/: Corruption.cpp
